@@ -137,6 +137,9 @@
         <td><label for="rcmcomposereceipt"><roundcube:label name="returnreceipt" />:</label></td>
         <td><roundcube:object name="receiptCheckBox" form="form" id="rcmcomposereceipt" /></td>
     </tr><tr>
+        <td><label for="rcmcomposedsn"><roundcube:label name="dsn" />:</label></td>
+        <td><roundcube:object name="dsnCheckBox" form="form" id="rcmcomposedsn" /></td>
+    </tr><tr>
         <td><label for="rcmcomposepriority"><roundcube:label name="priority" />:</label></td>
         <td><roundcube:object name="prioritySelector" form="form" id="rcmcomposepriority" /></td>
     </tr><tr>
