@@ -21,6 +21,7 @@ CHANGELOG Roundcube Webmail
 - Add unique index on users.username+users.mail_host
 - Make htmleditor option more consistent and add option to use HTML on reply to HTML message (#1485840)
 - Use empty envelope sender address for message disposition notifications (RFC2298.3)
+- Support SMTP Delivery Status Notifications - RFC3461 (#1486142)
 
 RELEASE 0.4.2
 -------------
